[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/712_serif.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/UI/Menus/Options.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/PauseOverlay.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/TitleScreen.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="TitleScreen" type="Node"]
script = ExtResource( 5 )

[node name="MainMenu" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
margin_left = 52.0
margin_top = 38.0
margin_right = 268.0
margin_bottom = 142.0

[node name="Title" type="Label" parent="MainMenu/VBoxContainer"]
margin_right = 216.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
text = "Robery Family"

[node name="MenuOptions" type="VBoxContainer" parent="MainMenu/VBoxContainer"]
margin_top = 36.0
margin_right = 216.0
margin_bottom = 104.0

[node name="Start" type="ToolButton" parent="MainMenu/VBoxContainer/MenuOptions"]
margin_right = 216.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Options")
text = "Start"

[node name="Options" type="ToolButton" parent="MainMenu/VBoxContainer/MenuOptions"]
margin_top = 24.0
margin_right = 216.0
margin_bottom = 44.0
focus_neighbour_top = NodePath("../Start")
focus_neighbour_bottom = NodePath("../Exit")
text = "Options"

[node name="Exit" type="ToolButton" parent="MainMenu/VBoxContainer/MenuOptions"]
margin_top = 48.0
margin_right = 216.0
margin_bottom = 68.0
focus_neighbour_top = NodePath("../Options")
focus_neighbour_bottom = NodePath("../Start")
text = "Exit"

[node name="Options" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -56.0
margin_right = 120.0
margin_bottom = 56.0

[node name="PauseOverlay" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="MainMenu/VBoxContainer/MenuOptions/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/MenuOptions/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/MenuOptions/Exit" to="." method="_on_Exit_pressed"]
